--- a/src/opnsense/service/templates/SixXS/AICCU/aiccu.conf
+++ b/src/opnsense/service/templates/SixXS/AICCU/aiccu.conf
@@ -13,16 +13,13 @@ server {{ SixXS.aiccu.general.server|default("tic.sixxs.net") }}
 # ipv6_interface is the name of the interface that will be used as a tunnel interface.
 # On *BSD the ipv6_interface should be set to gifX (eg gif0) for proto-41 tunnels
 # or tunX (eg tun0) for AYIYA tunnels.
-ipv6_interface gif0
+#ipv6_interface gif8
 
 # The tunnel_id to use (default: none)
 # (only required when there are multiple tunnels in the list)
 {% if SixXS.aiccu.general.tunnelId|default("") != "" %}
 tunnel_id {{ SixXS.aiccu.general.tunnelId }}
 {% endif %}
-
-# Be verbose? (default: false)
-verbose false
 
 # Daemonize? (default: true)
 # Set to false if you want to see any output
@@ -53,31 +50,13 @@ requiretls false
 #pidfile /var/run/aiccu.pid
 
 # Add a default route (default: true)
-#defaultroute true
-
-# Script to run after setting up the interfaces (default: none)
-#setupscript /usr/local/etc/aiccu-subnets.sh
-
-# Make heartbeats (default true)
-# In general you don't want to turn this off
-# Of course only applies to AYIYA and heartbeat tunnels not to static ones
-#makebeats true
-
-# Don't configure anything (default: false)
-#noconfigure true
+defaultroute {{ SixXS.aiccu.general.defaultRoute|default("true") }}
 
 # Behind NAT (default: false)
 # Notify the user that a NAT-kind network is detected
-#behindnat true
+behindnat {{ SixXS.aiccu.general.behindNat|default("false") }}
 
-# Local IPv4 Override (default: none)
-# Overrides the IPv4 parameter received from TIC
-# This allows one to configure a NAT into "DMZ" mode and then
-# forwarding the proto-41 packets to an internal host.
-# 
-# This is only needed for static proto-41 tunnels!
-# AYIYA and heartbeat tunnels don't require this.
-#local_ipv4_override
+{{ SixXS.aiccu.general.customConfig|default("") }}
 {% else %}
 # Service disabled
 {% endif %}
