aiccu: fixed config template for boolean statements
aiccu.conf requires values "true" and "false" instead "1" and "0".

--- a/src/opnsense/service/templates/SixXS/AICCU/aiccu.conf
+++ b/src/opnsense/service/templates/SixXS/AICCU/aiccu.conf
@@ -50,13 +50,22 @@ requiretls false
 #pidfile /var/run/aiccu.pid
 
 # Add a default route (default: true)
-defaultroute {{ SixXS.aiccu.general.defaultRoute|default("true") }}
+{% if SixXS.aiccu.general.defaultRoute|default("1") == "1" %}
+defaultroute true
+{% else %}
+defaultroute false
+{% endif %}
 
 # Behind NAT (default: false)
 # Notify the user that a NAT-kind network is detected
-behindnat {{ SixXS.aiccu.general.behindNat|default("false") }}
+{% if SixXS.aiccu.general.behindNat|default("0") == "1" %}
+behindnat true
+{% else %}
+behindnat false
+{% endif %}
 
-{{ SixXS.aiccu.general.customConfig|default("") }}
+# Additional user configuration
+{{ SixXS.aiccu.general.customConfig|default("# (no user configuration)") }}
 {% else %}
 # Service disabled
 {% endif %}
